--- a/pom.xml
+++ b/pom.xml
@@ -195,7 +195,7 @@
   </dependencies>
 
   <build>
-    <finalName>ssm_lxzjjgglxxxt</finalName>
+    <finalName>ssmDemo</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
@@ -249,6 +249,16 @@
         </includes>
         <filtering>false</filtering>
       </resource>
+      <!--解决字体等资源拦截问题-->
+      <resource>
+        <directory>src/main/webapp/static</directory>
+        <filtering>true</filtering>
+        <excludes>
+          <exclude>**/*.otf</exclude>
+
+        </excludes>
+      </resource>
     </resources>
+
   </build>
 </project>
